openshift/deployments/chemidconvert/chemidconvert-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chemidconvert-ingress
  namespace: chemidconvert
spec:
  rules:
  - host: chemidconvert.prod.openrisknet.org
    http:
      paths:
      - backend:
          serviceName: chemidconvert
          servicePort: 8080
